# cross-device-share

./: .pre-commit-config.yaml  README.md  azure-pipelines-publish.yml  pyproject.toml  requirements.txt
.github/workflows/: main_cdsaw.yml  main_cross-device-share.yml
cross_device_share/: app.py
cross_device_share/static/: index.html
tests/: test_cross_device_share.py
